feat(member-mgmt): complete ui/ux overhaul
- replaced fractional grid with minmax() for alignment
- increased stat numbers (0.8rem to 1.4rem), boxes (70px to 80px)
- increased all font sizes across columns
- fixed stat-label: added !important + solid #1a237e color
- fixed page-title h2: changed to #1a237e
- fixed filter-group label: removed gradient, increased size
- fixed headers: replaced var(--viking-text) with #1a237e
- removed gradient text effects from all headers
- added translation keys: personalInfo, additionalInfo (EN/AZ/RU)
- implemented expandable rows with hover effects
- responsive breakpoints: 1200px, 900px, 600px

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -787,6 +787,8 @@
         "list": "Siyahı"
       },
       "card": {
+        "personalInfo": "Üzvün Əlaqə Məlumatları",
+        "additionalInfo": "Hesab Məlumatları",
         "collapseTooltip": "Bağla",
         "expandTooltip": "Genişləndir",
         "emailLabel": "Email:",
