--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -787,6 +787,8 @@
         "list": "List"
       },
       "card": {
+        "personalInfo": "Member Contact Details",
+        "additionalInfo": "Account Information",
         "collapseTooltip": "Collapse",
         "expandTooltip": "Expand",
         "emailLabel": "Email:",
