--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -793,6 +793,8 @@
         "list": "Список"
       },
       "card": {
+        "personalInfo": "Контактные Данные Участника",
+        "additionalInfo": "Информация об Аккаунте",
         "collapseTooltip": "Свернуть",
         "expandTooltip": "Развернуть",
         "emailLabel": "Email:",
