--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -797,6 +797,7 @@
         "additionalInfo": "Информация об Аккаунте",
         "collapseTooltip": "Свернуть",
         "expandTooltip": "Развернуть",
+        "statusLabel": "Статус:",
         "emailLabel": "Email:",
         "phoneLabel": "Телефон:",
         "membershipLabel": "Членство:",
@@ -1603,6 +1604,61 @@
           "promotion": "Акция"
         }
       }
+    }
+  },
+  "register": {
+    "title": "Завершите регистрацию",
+    "titlePassword": "Создайте пароль",
+    "subtitle": "Добро пожаловать! Создайте учетную запись, чтобы присоединиться к нашему сообществу.",
+    "subtitlePassword": "Установите пароль для активации учетной записи",
+    "validatingInvitation": "Проверка приглашения...",
+    "invalidInvitation": "Недействительное приглашение",
+    "invitationInfo": {
+      "name": "Имя",
+      "email": "Электронная почта",
+      "membership": "Членство"
+    },
+    "form": {
+      "firstName": "Имя",
+      "firstNamePlaceholder": "Иван",
+      "lastName": "Фамилия",
+      "lastNamePlaceholder": "Иванов",
+      "phone": "Номер телефона (необязательно)",
+      "phonePlaceholder": "+79001234567",
+      "dateOfBirth": "Дата рождения (необязательно)",
+      "password": "Пароль",
+      "passwordPlaceholder": "Минимум 6 символов",
+      "passwordHint": "Минимум 6 символов",
+      "confirmPassword": "Подтвердите пароль",
+      "confirmPasswordPlaceholder": "Введите пароль повторно",
+      "agreeToTermsPrefix": "Я согласен с",
+      "termsOfService": "Условиями обслуживания",
+      "agreeToTermsMiddle": "и",
+      "privacyPolicy": "Политикой конфиденциальности",
+      "agreeToTermsSuffix": "",
+      "required": "*"
+    },
+    "actions": {
+      "createAccount": "🚀 Создать учетную запись",
+      "creating": "Создание учетной записи...",
+      "cancel": "Отмена",
+      "returnHome": "Вернуться на главную"
+    },
+    "footer": {
+      "alreadyHaveAccount": "Уже есть учетная запись?",
+      "signIn": "Войти"
+    },
+    "errors": {
+      "invalidToken": "Недействительная или просроченная ссылка-приглашение",
+      "validationFailed": "Не удалось проверить приглашение. Пожалуйста, попробуйте снова.",
+      "enterFullName": "Пожалуйста, введите ваше полное имя",
+      "passwordLength": "Пароль должен содержать не менее 6 символов",
+      "passwordMismatch": "Пароли не совпадают",
+      "agreeToTermsRequired": "Пожалуйста, согласитесь с условиями",
+      "registrationFailed": "Регистрация не удалась. Пожалуйста, попробуйте снова."
+    },
+    "success": {
+      "registrationComplete": "Регистрация завершена"
     }
   }
 }
