feat: enhanced landing page with premium logo integration and optimized layout
- added Vikings Hammer logo with 480px size for strong brand presence
- removed shield icon emoji, using actual logo as primary brand element
- reduced hero title to 3.5rem for better visual hierarchy
- added purple/orange glow effects on logo matching brand colors
- enhanced logo hover effects (scale 1.08, lift 5px)
- improved spacing with 35px logo margin and 70px scroll indicator gap
- fixed language persistence with localStorage implementation
- applied premium CSS styling to QR scan and QR code buttons
- created comprehensive landing page with all business content
- integrated Google Maps with location marker at gym coordinates
- added Instagram social link and photo gallery structure
- implemented responsive design for mobile/tablet/desktop
- all changes maintain user-friendly, professional appearance

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -352,6 +352,7 @@
       "plan": "Plan",
       "totalVisits": "Ümumi Ziyarətlər",
       "remainingVisits": "Qalan Ziyarətlər",
+      "visitsRemaining": "ziyarət",
       "usedVisits": "İstifadə Edilmiş Ziyarətlər",
       "nextPayment": "Növbəti Ödəniş",
       "daysRemaining": "Qalan Günlər",
