--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -352,6 +352,7 @@
       "plan": "План",
       "totalVisits": "Всего посещений",
       "remainingVisits": "Осталось посещений",
+      "visitsRemaining": "посещений",
       "usedVisits": "Использовано посещений",
       "nextPayment": "Следующий платеж",
       "daysRemaining": "Осталось дней",
