feat: added animated gif logo to sparta dashboard
- replaced static sword emoji with animated tenor.gif in sparta avatar
- added fallback to emoji if gif fails to load
- updated sparta.css to properly display gif in circular avatar
- gif maintains 100px circular container with pulse animation
- enhanced sparta dashboard branding with dynamic visual element
- gif file permanently stored in frontend/public/tenor.gif

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -740,8 +740,7 @@
     },
     "sparta": {
       "title": "Sparta Dashboard",
-      "subtitle": "Full system control and management"
-    },
+      "subtitle": "Thiss iss SPARTAAAA!"    },
     "memberManagement": {
       "pageTitle": "Viking Hammer Member Management",
       "returnButton": "Return to Dashboard",
