--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -746,7 +746,86 @@
     },
     "sparta": {
       "title": "Панель Sparta",
-      "subtitle": "Полный контроль и управление системой"
+      "subtitle": "Thiss iss SPARTAAAA!"
+    },
+    "landingPage": {
+      "header": {
+        "brandName": "Viking Hammer CrossFit",
+        "welcome": "Добро пожаловать",
+        "dashboard": "Панель",
+        "logout": "Выйти",
+        "login": "Войти",
+        "signup": "Начать"
+      },
+      "hero": {
+        "title": "VİKİNG HAMMER CROSSFIT",
+        "location": "БАКУ, АЗЕРБАЙДЖАН",
+        "tagline": "Раскройте Свою Внутреннюю Силу. Постройте Воина Внутри.",
+        "description": "В Viking Hammer CrossFit мы верим, что сила — это больше, чем мышцы — это мышление, дисциплина и сообщество. Расположенный в самом сердце Баку, наш бокс сочетает в себе мощь CrossFit-тренировок, функциональный фитнес и персональный коучинг, чтобы помочь вам стать лучшей версией себя.",
+        "getStarted": "Начать Ваш Путь",
+        "scrollText": "Прокрутите, чтобы узнать больше"
+      },
+      "stats": {
+        "activeMembers": "Активных Членов",
+        "dailyClasses": "Ежедневных Занятий",
+        "expertTrainers": "Экспертных Тренеров"
+      },
+      "features": {
+        "title": "Что Мы Предлагаем",
+        "groupWorkouts": {
+          "title": "Групповые Тренировки",
+          "description": "Высокоинтенсивные, коммунально-ориентированные сессии, которые бросают вызов и мотивируют."
+        },
+        "personalTraining": {
+          "title": "Персональные Тренировки",
+          "description": "Индивидуальные программы, разработанные для ваших личных целей и уровня физической подготовки."
+        },
+        "athleteDevelopment": {
+          "title": "Развитие Спортсменов",
+          "description": "Продвинутые тренировки для профессионалов и участников соревнований, стремящихся к пиковой производительности."
+        },
+        "community": {
+          "title": "Поддерживающее Сообщество",
+          "description": "Тренируйтесь вместе с единомышленниками, которые подталкивают, вдохновляют и отмечают каждую веху."
+        }
+      },
+      "whyChooseUs": {
+        "title": "Почему Выбрать Нас",
+        "item1": "Сертифицированные и опытные CrossFit-тренеры",
+        "item2": "Современное оборудование и безопасная тренировочная среда",
+        "item3": "Гибкие планы членства для каждого фитнес-путешествия",
+        "item4": "Реальные результаты. Реальный прогресс. Реальное сообщество."
+      },
+      "gallery": {
+        "title": "Наш Зал",
+        "subtitle": "Взгляните на наше оборудование мирового класса и яркое сообщество",
+        "addYourPhoto": "Добавьте фото зала здесь",
+        "addPhotosNote": "Добавьте фотографии зала в папку /public/images/ (gym1.jpg - gym6.jpg)",
+        "imageAlt": {
+          "gym1": "Тренировочная Зона CrossFit",
+          "gym2": "Групповая Тренировка",
+          "gym3": "Персональная Тренировка",
+          "gym4": "Профессиональное Оборудование",
+          "gym5": "Поддерживающее Сообщество",
+          "gym6": "Тренировки Элитных Спортсменов"
+        }
+      },
+      "contact": {
+        "title": "Посетите Нас",
+        "addressLabel": "Адрес",
+        "address": "Баку AZ1072, Азербайджан",
+        "phoneLabel": "Телефон",
+        "phone": "+994 50 300 33 23",
+        "followLabel": "Instagram",
+        "instagram": "@vikings__hammer",
+        "followButton": "Подписывайтесь в Instagram",
+        "mapTitle": "Местоположение Viking Hammer CrossFit"
+      },
+      "footer": {
+        "brandName": "Viking Hammer CrossFit",
+        "tagline": "Трансформируйте свое тело, закалите дух и присоединитесь к самому сильному сообществу в Баку.",
+        "copyright": "© 2025 Viking Hammer CrossFit. Все права защищены."
+      }
     },
     "memberManagement": {
       "pageTitle": "Управление Участниками Viking Hammer",
